# WhoDis

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  backfill_boxes.py  pyproject.toml  run.py  run_container.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  test.yml
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_auth.py  test_deepface_engine.py  test_engines.py  test_schemas.py  test_smoke.py
whodis/: __init__.py  auth.py  config.py  main.py  models.py  schemas.py
whodis/engines/: __init__.py  base.py  deepface_engine.py  imagehash_engine.py  registry.py
whodis/routers/: __init__.py  api.py  auth.py  web.py
whodis/services/: __init__.py  annotation.py  detection.py  person.py
whodis/templates/: annotate.html  api_keys.html  base.html  dashboard.html  login.html  people.html  person_detail.html
